# natu

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  base.c  base.h  changelog.md  config.nims  docs.nims  libtonc.dox  mmutil.nim  mmutil.nims  natu.nim  natu.nimble  nim.cfg  readme.md  todo.txt  tonc.nim  xatu.nim
asm/: clr_blend_fast.s  tonc_isr_master.s  tonc_isr_nest.s
examples/: config.nims
examples/anim_coins/: anim_coins.nim  coin.s  config.nims  main.nim
examples/anim_sprite/: anim_sprite.nim  config.nims  main.nim  twiggy.s
examples/goodboy_gallery/: audio.nims  backgrounds.nims  config.nims  graphics.nims
examples/hello_world/: Makefile  config.nims  hello_world.nim  helloworld.nim  main.nim
examples/helloworld/: Makefile  nim.cfg
examples/move_sprite/: config.nims  main.nim  move_sprite.nim  ship.s  (+1 more)
include/: tonc_legacy.h  tonc_memdef.h  tonc_tte.h
natu/: backgrounds.nim  bios.nim  bits.nim  config.nim  core.nim  docs.nim  graphics.nim  input.nim  irq.nim  legacy.nim  math.nim  maxmod.nim  memory.nim  mgba.nim  oam.nim  panicoverride.nim  platform.nim  posprintf.nim  surface.nim  surfaces.nim  timers.nim  tte.nim  utils.nim  video.nim  waitstates.nim
source/: gba.c  msl.h  s3m.c  samplefix.c  systems.h  xm.c
source_ds/: mm_stream.s
source_ds9/: mm_soundbank.s
source_ds9e/: mm_mixer_ds9.s
src/: tonc_color.c  tonc_core.c  tonc_input.c  tonc_oam.c  tonc_obj_affine.c  tonc_schr4c.c  tonc_schr4r.c
tonc/: maxmod.nim  mgba.nim  panicoverride.nim
tools/: bgconvert.nim  common.nim  gbafix.nim  gfxconvert.nim  mmconvert.nim
(+138 files in other folders)
